fixed horizontal scroll

--- a/css/custom.css
+++ b/css/custom.css
@@ -159,7 +159,6 @@ a, a:hover, a:visited, a:active {
     margin-left: 0 !important;
     z-index: -99;
     padding-top: 10vh;
-    width: 100vw;
 }
     @media only screen and (max-width: 1400px) {
     .bg {
